--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,12 +8,12 @@ body{
     font-family: "Arial";
     font-size: 16px;
 }
-.container{
+#container{
     width: 70%;
     padding: 1em;
     border: 1px solid #ddd;
     margin: 0 auto;
 }
-.container h1{
+#container h1{
     font-size: 24px;
 }
